--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -5,12 +5,25 @@
     <title>Fragments</title>
 </head>
 <body>
-    <div th:fragment="header">
-        <span th:text="${#authentication.principal.username}">Username</span>
-        <br>
-        <form th:action="@{/logout}" method="post">
-            <button type="submit">Logout</button>
-        </form>
-    </div>
+<div th:fragment="header">
+    <span th:text="${#authentication.principal.username}">Username</span>
+    <br>
+    <form th:action="@{/logout}" method="post">
+        <button type="submit">Logout</button>
+    </form>
+    <div th:insert="~{fragment :: locale}"></div>
+</div>
+
+<div th:fragment="locale">
+    <form action="">
+        <select name="lang" onchange="this.form.submit()">
+            <option></option>
+            <option value="en">EN</option>
+            <option value="ru">RU</option>
+        </select>
+    </form>
+</div>
+
+
 </body>
 </html>
